# sklearn-oblique-tree

./: .gitignore
oc1_source/: CMakeLists.txt  classify.c  compute_impurity.c  core  display  display.c  gendata  gendata.c  load_data.c  mktree  mktree.c  oc1.h  output  output.txt  perturb.c  prune.c  train_loop.sh  tree_util.c  util.c
sklearn_oblique_tree/oblique/: oblique.py
